--- a/Tugas-2-HTML-CSS/biodata.html
+++ b/Tugas-2-HTML-CSS/biodata.html
@@ -7,12 +7,12 @@
 <fieldset class="h"/>
 <table style="width: 600px;">
 <body style="background-color:gray"> </body>
-
 <tr>
 <td rowspan="10" width="100px">
 <img src="foto.png" width="200px" height="200px">
 </td>
 </tr>
+<center>
 <font size="20px">
 <b>BIODATA</b>
 <tr>
